--- a/index.html
+++ b/index.html
@@ -70,15 +70,7 @@
      </ul>
  </div>
 
- <div class="weather-forecast"> 
-
- <div class="row"> Thu </div>
-<div> <img src="https://openweathermap.org/img/wn/10d@2x.png" alt="" width="48" id="weather-image" /> </div>
- <div class="col-2">
-<span class="temperature-max"> 28&deg;</span>
-<span class="temperature-min"> 17&deg; </span>
- </div>
-
+ <div class="weather-forecast" id="forecast"> </div>
 
 <script src="index.js"> </script>
 </body>
