--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 <footer id="footer">
 Coded by
-<a href="https://github.com/TshegoMorapama" target="_blank"> Tshegofatso Morapama </a>,
+<a href="https://www.linkedin.com/in/tshegofatso-morapama-a56631227/?trk=public-profile-join-page" target="_blank"> Tshegofatso Morapama </a>,
 open sourced by <a href="https://github.com/TshegoMorapama/Boso-App" target="_blank"> Github</a>
 and hosted on <a href="https://app.netlify.com/sites/boso-app/overview" target="_blank"> Netlify </a>
 
